--- a/index.html
+++ b/index.html
@@ -8,20 +8,47 @@
 
 	<body>
 		<link rel="stylesheet" href="style.css" />
-        <div class="header">
-            <h3>Aether</h3>
-            <div class="sideContent">
-                <h5>Permium</h5>
-                <h5>Support</h5>
-                <h5>Download</h5>
-                <span class="verticalLine"></span>
-                <h5>Sing up</h5>
-                <h5>Log in</h5>
-            </div>
-        </div>
-        <div>
-            <div class="left"></div>
-            <div class="right"></div>
-        </div>
+		<div class="header">
+			<div class="companyName">
+				<img
+					class="headerImage"
+					src="https://companieslogo.com/img/orig/AETHER.NS.D-ba315932.png?t=1666507540"
+					alt=""
+				/>
+				<h3 class="title">ether</h3>
+			</div>
+
+			<div class="sideContent">
+				<h5>Permium</h5>
+				<h5>Support</h5>
+				<h5>Download</h5>
+				<span class="verticalLine"></span>
+				<h5>Sing up</h5>
+				<h5>Log in</h5>
+			</div>
+		</div>
+		<div class="container">
+			<div class="left">
+				<h1 class="heading">Ends soon: $0 for 6 months of premium</h1>
+				<p class="subHeading1">
+					Listen to your favorite music ad-free and offline, free
+					until April 20, 2024. Cancel anytime.
+				</p>
+				<p class="subHeading1">Offers ends 2d:12h:47m</p>
+				<button class="buttons">Get 3 MONTHS FOR $0</button
+				><button class="buttons">VIEW PLANS</button>
+				<p class="subHeading2">
+					Individual plan onlwy. $9.99/month after.
+					<span>Terms and conditions apply</span>. Open only to users
+					who haven't already tried Premium. Offer ends May 11, 2024.
+				</p>
+			</div>
+			<div class="right">
+				<img
+					src="https://us.123rf.com/450wm/mnbxgraphics/mnbxgraphics2005/mnbxgraphics200500100/147723176-podcast-pop-art-poster-with-illustrations-of-professional-microphones-headphones-notebook-and.jpg?ver=6"
+					alt=""
+				/>
+			</div>
+		</div>
 	</body>
 </html>
